html naam aangepast

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,7 +17,7 @@ body {
 :root {
     --main-color-green: #4e7141;
     --main-color-beige: #f9e9c2;
-    background-image: url(assets/bf2313f512b2aa9f8d58130796efd545.jpg);
+    background-image: url(./assets/plaatje.jpg);
     padding: 340px;
     background-repeat: no-repeat;
     background-position: center top;
